# pkgoh

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  pkgoh.example.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: AGENT_BEHAVIOR_RULES.md  PRD.en.md  PRD.zh-CN.md  pkgoh_tui_implementation_spec.md  stitch-prompt.md
src/: actions.rs  app.rs  config.rs  i18n.rs  lib.rs  model.rs  plugins.rs
